<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_menu">

    <fragment
        android:id="@+id/fragment_menu"
        android:name="ru.cpt.android.whac_a_mole.ui.screen.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu">
    </fragment>

    <fragment
        android:id="@+id/fragment_game"
        android:name="ru.cpt.android.whac_a_mole.ui.screen.GameFragment"
        android:label="@string/title_game"
        tools:layout="@layout/fragment_game">
    </fragment>

    <fragment
        android:id="@+id/fragment_result_game"
        android:name="ru.cpt.android.whac_a_mole.ui.screen.ResultGameFragment"
        android:label="@string/title_result_game"
        tools:layout="@layout/fragment_result_game">
    </fragment>

</navigation>